--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <title>Document</title>
-<script defer src="bundle.js"></script></head>
+</head>
 <body>
     
 </body>
