--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>GhostSdkTester</title>
+    <title>Document</title>
+
 <script defer src="bundle.js"></script></head>
 <body>
     test
